civic-tech-taxonomy/api-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: civic-tech-taxonomy
spec:
  selector:
    app: api-server
  ports:
  - name: http
    port: 80
    targetPort: http
